--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Welcome to Kokoa Clone</title>
   </head>
   <body>
-    <div class="stasus-bar">
-      <div class="status-bar_column">
+    <div class="status-bar">
+      <div class="status-bar__column">
         <span>No Service</span>
-        <!-- To Do : wifi icon -->
+        <i class="fas fa-wifi"></i>
       </div>
-      <div class="status-bar_column">
+      <div class="status-bar__column">
         <span>18:43</span>
       </div>
-      <div class="status-bar_column">
+      <div class="status-bar__column">
         <span>110%</span>
-        <!-- battery icon -->
-        <!-- lightning icon -->
+        <i class="fas fa-battery-full fa-lg"></i>
+        <!-- lg : large -->
+        <i class="fas fa-bolt"></i>
       </div>
     </div>
 
@@ -37,5 +39,9 @@
       <a href="#">Find Kokoa Account or Password</a>
       <!-- # : same page-->
     </form>
+    <script
+      src="https://kit.fontawesome.com/3940552dbc.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
