--- a/Assignment/10me.html
+++ b/Assignment/10me.html
@@ -51,8 +51,8 @@
               <div>독일소설</div>
             </div>
             <div>
-              <div><i class="fas fa-bookmark"></i></div>
-              <div></div>
+              <div class="bod__fav"><i class="fas fa-bookmark"></i></div>
+              <div class="bod__book">Book Now</div>
             </div>
           </div>
         </div>
@@ -62,11 +62,18 @@
         <div class="title">Popular authors</div>
 
         <div class="book authors">
-          <div class="authors__pic"></div>
-          <div class="authors__text">
-            <div></div>
-            <div></div>
-            <div></div>
+          <div class="authors__cover">
+            <img
+              src="https://pds.joongang.co.kr/news/component/joongang_sunday/201603/20/27-22.png"
+            />
+          </div>
+          <div class="authors__info">
+            <div>헤르만 헤세</div>
+            <div>
+              독일계 스위스인 문학가이자 예술가. 대표작으로 데미안, 싯다르타,
+              유리알 유희, 수레바퀴 아래서 등이 있다. 1946년 노벨문학상을
+              수상했다.
+            </div>
           </div>
         </div>
       </div>
