--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Welcome to Kokoa Clone</title>
   </head>
   <body>
+    <!-- [status bar] -->
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -25,6 +26,7 @@
       </div>
     </div>
 
+    <!-- [header] -->
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
       <p class="welcome-header__text">
@@ -32,6 +34,7 @@
       </p>
     </header>
 
+    <!-- [form] -->
     <form id="login-form">
       <input type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="Password" />
@@ -39,6 +42,7 @@
       <a href="#">Find Kokoa Account or Password</a>
       <!-- # : same page-->
     </form>
+
     <script
       src="https://kit.fontawesome.com/3940552dbc.js"
       crossorigin="anonymous"
