--- a/Assignment/10me.html
+++ b/Assignment/10me.html
@@ -57,8 +57,60 @@
           </div>
         </div>
 
-        <div class="title">Top Adventures</div>
+        <div class="title">Top Classics</div>
+        <div class="book tav">
+          <div class="ta__content">
+            <div class="ta__cover">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/777/l9788937460777.jpg"
+              />
+            </div>
+            <div class="ta__star">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
+            </div>
+          </div>
 
+          <div class="ta__content">
+            <div class="ta__cover">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/050/l9788937460050.jpg"
+              />
+            </div>
+            <div class="ta__star">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
+            </div>
+          </div>
+
+          <div class="ta__content">
+            <div class="ta__cover">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/788/l9788937462788.jpg"
+              />
+            </div>
+            <div class="ta__star">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
+            </div>
+          </div>
+
+          <div class="ta__content">
+            <div class="ta__cover">
+              <img
+                src="http://image.kyobobook.co.kr/images/book/large/848/l9788937443848.jpg"
+              />
+            </div>
+            <div class="ta__star">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
+            </div>
+          </div>
+        </div>
         <div class="title">Popular authors</div>
 
         <div class="book authors">
