--- a/friends.html
+++ b/friends.html
@@ -1,5 +1,3 @@
-<!-- By DEFAULT most of web servers configured to look for INDEX.html FIRST-->
-<!-- VS Code shortcut : "!" 자동 코드 완성 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,24 +24,163 @@
       </div>
     </div>
 
+    <!-- [screen header] -->
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
+        <span class="dot__red header__dot"></span>
+      </div>
+    </header>
+
+    <!-- [friends screen]-->
+    <a id="friends-display-link"
+      ><i class="fas fa-info-circle"></i> Friends' Names Display
+      <i class="fas fa-chevron-right fa-xs"></i
+    ></a>
+
+    <!-- [main screen] -->
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/377cc2105964461.5f854f2605c4b.jpeg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Jimin</h4>
+            <!-- <h6 class="user-component__subtitle">text</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://www.seekpng.com/png/full/149-1493621_png-bts-taegi-taehyung-v-yoongi-bangtan-jin.png"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Yoongi</h4>
+            <!-- <h6 class="user-component__subtitle">text</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://www.dailypop.kr/news/photo/201912/42469_80635_192.jpg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">JungKook</h4>
+            <!-- <h6 class="user-component__subtitle">text</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://i.pinimg.com/236x/34/ac/34/34ac34d418b22b6bdea789a7f525c6d9.jpg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">RM</h4>
+            <!-- <h6 class="user-component__subtitle">text</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://i.zoomtventertainment.com/story/J-Hope_on_weverse.png?tr=w-400,h-300,fo-auto"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">J-Hope</h4>
+            <!-- <h6 class="user-component__subtitle">text</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/3/35/Jin_for_Dispatch_%22Boy_With_Luv%22_MV_behind_the_scene_shooting%2C_15_March_2019_01_%28cropped%29.jpg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Jin</h4>
+            <!-- <h6 class="user-component__subtitle">text</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+
+      <!-- [channel] -->
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span> <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://t1.kakaocdn.net/kakaocorp/kakaocorp/admin/64d0623a017800001.png"
+            class="user-component__avatar user-component__avatar--sm"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title user-component__title--not-bold">
+              Channel
+            </h4>
+            <!-- <h6 class="user-component__subtitle">text</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column">
+          <div><span>2 </span><i class="fas fa-chevron-right fa-xs"></i></div>
+        </div>
+      </div>
+    </main>
+
+    <!-- [navigation bar] -->
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-user fa-2x"></i></a>
+          <a class="nav__link" href="friends.html"
+            ><i class="fas fa-user fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="far fa-comment fa-2x"></i></a>
+          <a class="nav__link" href="chats.html">
+            <span class="badge nav__notification">1</span>
+            <i class="far fa-comment fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"
+          <span class="dot__red nav__dot"></span>
+          <a class="nav__link" href="more.html"
             ><i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
       </ul>
     </nav>
+
+    <!-- [splash screen] -->
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/3940552dbc.js"
