--- a/chat.html
+++ b/chat.html
@@ -49,7 +49,7 @@
           <span class="message__author">Jimin</span>
           <div class="message__info">
             <span class="message__bubble">Where are you?</span>
-            <span class="message__time">21:27</span>
+            <span class="message__time">18:22</span>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__bubble">I'll be there soon.</span>
-            <span class="message__time">21:29</span>
+            <span class="message__time">18:28</span>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
           <span class="message__author">Jimin</span>
           <div class="message__info">
             <span class="message__bubble">OK!</span>
-            <span class="message__time">21:30</span>
+            <span class="message__time">18:35</span>
           </div>
         </div>
       </div>
@@ -86,6 +86,9 @@
       </div>
     </form>
 
+    <div id="only-mobile">
+      <span> Your screen is TOO BIG </span>
+    </div>
     <script
       src="https://kit.fontawesome.com/3940552dbc.js"
       crossorigin="anonymous"
