--- a/find.html
+++ b/find.html
@@ -119,7 +119,9 @@
         </li>
       </ul>
     </nav>
-
+    <div id="only-mobile">
+      <span> Your screen is TOO BIG </span>
+    </div>
     <script
       src="https://kit.fontawesome.com/3940552dbc.js"
       crossorigin="anonymous"
