--- a/friends.html
+++ b/friends.html
@@ -182,6 +182,10 @@
       <i class="fas fa-comment"></i>
     </div>
 
+    <div id="only-mobile">
+      <span> Your screen is TOO BIG </span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/3940552dbc.js"
       crossorigin="anonymous"
