--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <!-- # : same page-->
     </form>
 
+    <div id="only-mobile">
+      <span> Your screen is TOO BIG </span>
+    </div>
     <script
       src="https://kit.fontawesome.com/3940552dbc.js"
       crossorigin="anonymous"
