--- a/chats.html
+++ b/chats.html
@@ -89,7 +89,7 @@
       </ul>
     </nav>
     <div id="only-mobile">
-      <span> Your screen is TOO BIG </span>
+      <span> Your screen is TOO BIG 😢 </span>
     </div>
 
     <script
