--- a/chat.html
+++ b/chat.html
@@ -87,7 +87,7 @@
     </form>
 
     <div id="only-mobile">
-      <span> Your screen is TOO BIG </span>
+      <span> Your screen is TOO BIG 😢 </span>
     </div>
     <script
       src="https://kit.fontawesome.com/3940552dbc.js"
