--- a/friends.html
+++ b/friends.html
@@ -183,7 +183,7 @@
     </div>
 
     <div id="only-mobile">
-      <span> Your screen is TOO BIG </span>
+      <span> Your screen is TOO BIG 😢 </span>
     </div>
 
     <script
