--- a/settings.html
+++ b/settings.html
@@ -93,7 +93,7 @@
       </ul>
     </nav>
     <div id="only-mobile">
-      <span> Your screen is TOO BIG </span>
+      <span> Your screen is TOO BIG 😢 </span>
     </div>
     <script
       src="https://kit.fontawesome.com/3940552dbc.js"
